# P-ai

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  LICENSE  QA.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  retrain.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IMPLEMENTATION_REFERENCE.md  ROADMAP.md  getting_started.md
personal_ai/: .gitignore  README.md  actions.py  assistant.py  config.py  intents.csv  main.py  reminders.py  requirements.txt  train_model.py
personal_ai/actions/: app_actions.py
personal_ai/api/: __init__.py  app.py
personal_ai/core/: assistant.py  config.py  entities.py  logging_config.py  parser.py  profile.py
personal_ai/data/: profile.json
personal_ai/entities/: extractor.py
personal_ai/learning/: collector.py  deployer.py  evaluator.py  trainer.py
personal_ai/llm/: __init__.py  base.py  openai_compatible.py
personal_ai/ml/: train.py
personal_ai/parser/: command_splitter.py
personal_ai/reminders/: __init__.py  service.py
personal_ai/security/: permissions.py
personal_ai/tests/: test_parser_entities_reminders.py  tester.py
personal_ai/ui/: main_window.py
scripts/: build_executable.py  model_tester.py  retrain_model.py  safe_version.py  windows_smoke_test.py  windows_test_and_run.ps1
src/personal_ai/: .gitignore  main.py
src/personal_ai/core/: assistant.py  config.py  entities.py
src/personal_ai/data/: intents.csv
src/personal_ai/entities/: __init__.py
src/personal_ai/learning/: trainer.py
src/personal_ai/parser/: __init__.py
src/personal_ai/reminders/: __init__.py  service.py
src/personal_ai/security/: permissions.py
tests/: __init__.py  test_assistant.py  test_entities.py  test_parser.py  test_path_actions.py  test_reminders.py  test_security_permissions.py
ui-desktop/: main_window.py
ui-web/: README.md
