[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-ai-assistant"
version = "0.1.0"
description = "Voice and text personal AI assistant with intent classification"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sahil Rathod" }
]
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["personal_ai*"]

[tool.pytest.ini_options]
testpaths = ["personal_ai/tests"]
python_files = ["test_*.py"]
