[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-ai"
version = "0.1.0"
description = "Personal AI assistant with intent parsing, reminders, desktop UI, and optional API support."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sahil Rathod" }
]
license = { text = "MIT" }
dependencies = [
  "fastapi",
  "joblib",
  "numpy",
  "pandas",
  "PySide6",
  "pyttsx3",
  "python-dotenv",
  "rich",
  "scikit-learn",
  "SpeechRecognition"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyinstaller>=6.0"
]
api = [
  "uvicorn[standard]"
]

[project.scripts]
personal-ai = "personal_ai.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["personal_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
